# waybar-tools

./: .gitignore  CMakeLists.txt  README.md
doc/: DBus.md  SpotifyAdaptor.h  SpotifyDBus.xml  SpotifyProxy.h
include/: ModuleInterface.h  SpotifyDBusInterface.h  SysFs.h
include/modules/: Battery.h  Date.h  Keyboard.h  Spotify.h
src/: SpotifyDBusInterface.cpp  SysFs.cpp  main.cpp
src/modules/: Battery.cpp  Date.cpp  Keyboard.cpp  Spotify.cpp
